Shorten version range in download buttons Display the latest + " and X more" instead of the full list. The full list remains in pinned version displays, the version page itself, etc.